Resolved: Cat alignment and lower text centering

--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,8 @@ nav{
 }
 
 nav >img{
-    margin-left: 11%;
+    margin-top: 1%;
+    margin-left: 9%;
     border: 2px solid black;
 }
 
@@ -24,22 +25,22 @@ nav>a{
     font-size: large;
     color: white;
     float: right;
-    margin: 20px 90px 10px 20px;
+    margin: 20px 130px 10px 0;
 }
 
 .header-text{
-    padding: 70px;
+    padding: 40px;
     width: 45%;
     float: left;
     margin-left: 90px;
-    margin-top: 20px;
+    margin-top: 0px;
     line-height: 45px;
     font-size: large;
 }
 
 .cat-drip{
     position: relative;
-    margin: 60px 0;
+    margin: 20px 60px 80px 60px;
     border-radius: 10px;
  }
 
@@ -55,7 +56,7 @@ nav>a{
     color: white;
     font-size: large;
     font-weight: normal;
-    border-radius: 20px;
+    border-radius: 10px;
  }
 
  .first-section h1{
